<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:baselineAligned="false">

    <TextView
        android:text="@string/label_motion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblMotion"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_forward"
        android:id="@+id/btnGoForward"
        android:onClick="onClickForward"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        android:id="@+id/btnGoBack"
        android:onClick="onClickBack" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_left"
        android:id="@+id/btnRotateLeft"
        android:onClick="onClickLeft" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_right"
        android:id="@+id/btnRotateRight"
        android:onClick="onClickRight" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_stop"
        android:id="@+id/btnStop"
        android:onClick="onClickStop" />

    <TextView
        android:text="@string/label_relay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblRelay"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginTop="20dp" />

    <ToggleButton
        android:text="@string/button_relay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tgbRelay1"
        android:checked="false"
        android:onClick="onClickRelay1"
        android:textOff="@string/relay_off"
        android:textOn="@string/relay_on"
        style="@android:style/Widget.Button.Toggle" />

    <ToggleButton
        android:text="@string/button_relay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tgbRelay2"
        android:textOff="@string/relay_off"
        android:textOn="@string/relay_on"
        android:onClick="onClickRelay2"
        style="@android:style/Widget.Button.Toggle" />

    <ToggleButton
        android:text="@string/button_relay3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tgbRelay3"
        android:textOff="@string/relay_off"
        android:textOn="@string/relay_on"
        android:onClick="onClickRelay3"
        style="@android:style/Widget.Button.Toggle" />

    <ToggleButton
        android:text="@string/button_relay4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tgbRelay4"
        android:textOff="@string/relay_off"
        android:textOn="@string/relay_on"
        android:onClick="onClickRelay4"
        style="@android:style/Widget.Button.Toggle" />

</LinearLayout>
